Update tests, documentation and filters.
